--- a/_posts/2024-11-09-SQL注入总结.md
+++ b/_posts/2024-11-09-SQL注入总结.md
@@ -5,14 +5,10 @@ author: eclaircy
 date: 2024-11-08 16:17:00 +0800
 categories: [Web Security, SQLi]
 tags: [SQLi]
-pin: true
+pin: false
 math: true
 mermaid: true
 ---
-
-
-
-# SQL注入总结
 
 
 ## **1. SQL注入的起因**
