--- a/_posts/2024-11-08-XSS.md
+++ b/_posts/2024-11-08-XSS.md
@@ -5,7 +5,7 @@ author: eclaircy
 date: 2024-11-08 16:17:00 +0800
 categories: [Web Security, XSS]
 tags: [XSS]
-pin: true
+pin: false
 math: true
 mermaid: true
 ---
