--- a/_posts/2024-11-09-SSRF.md
+++ b/_posts/2024-11-09-SSRF.md
@@ -5,7 +5,7 @@ author: eclaircy
 date: 2024-11-08 11:33:00 +0800
 categories: [Web Security, SSRF]
 tags: [SSRF]
-pin: true
+pin: false
 math: true
 mermaid: true
 ---
