--- a/_posts/web/2024-11-08-XSS.md
+++ b/_posts/web/2024-11-08-XSS.md
@@ -1,5 +1,5 @@
 ---
-title: Web Security- XSS
+title: "[Web Security] XSS"
 description: XSS Injection defination, bypass, harm, protection
 author: eclaircy
 date: 2024-11-08 16:17:00 +0800
