--- a/_posts/web/2024-11-09-SQLi.md
+++ b/_posts/web/2024-11-09-SQLi.md
@@ -1,5 +1,5 @@
 ---
-title: Web Security- SQL Injection
+title: "[Web Security] SQL Injection"
 description: SQL Injection defination, bypass, harm, protection
 author: eclaircy
 date: 2024-11-08 16:17:00 +0800
