--- a/_posts/web/2024-11-09-SSRF.md
+++ b/_posts/web/2024-11-09-SSRF.md
@@ -1,5 +1,5 @@
 ---
-title: Web Security- SSRF
+title: "[Web Security] SSRF"
 description: SSRF defination, bypass, harm, protection
 author: eclaircy
 date: 2024-11-08 11:33:00 +0800
